<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/bg_gradient_dark">

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/title"
        android:padding="12dp"
        android:background="@drawable/bg_input_rounded"
        android:textColor="@android:color/white"
        android:textColorHint="#BEBEBE"/>

    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:hint="@string/content"
        android:padding="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_input_rounded"
        android:textColor="@android:color/white"
        android:textColorHint="#BEBEBE"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical"
        android:overScrollMode="always" />

    <Button
        android:id="@+id/btnSaveNote"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_button_purple"/>
</LinearLayout>
